# surrealdb-wasi-component

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  rust-toolchain.toml
.github/scripts/: component-release-notes.sh  detect-releases.sh
.github/workflows/: ci.yml  release-components.yml  release.yml
crates/surrealdb-component-sdk/: Cargo.toml  README.md  wkg.toml
crates/surrealdb-component-sdk/src/: bindings.rs  decoder.rs  lib.rs  live.rs  query.rs  result.rs
crates/surrealdb-component-sdk/src/types/: bytes.rs  datetime.rs  decimal.rs  duration.rs  geometry.rs  mod.rs  record_id.rs  regex.rs  tagged_scalar.rs  uuid.rs
crates/surrealdb-component-sdk/wit/: world.wit
crates/surrealdb-host-adapter/: Cargo.toml  README.md
crates/surrealdb-host-adapter/src/: adapter.rs  bindings.rs  config.rs  convert.rs  lib.rs  manager.rs
crates/surrealdb-host-adapter/wit/: world.wit
docs/: wasmtime-example.md
examples/guest-demo/: Cargo.toml
examples/guest-demo/src/: bindings.rs  lib.rs  main.rs
examples/guest-demo/src/scenarios/: basic_query.rs  live_query.rs  mod.rs  special_types.rs
examples/guest-demo/wit/: world.wit
examples/host-wasmtime/: Cargo.toml
examples/host-wasmtime/src/: main.rs
examples/host-wasmtime/wit/: world.wit
wit/: README.md  world.wit
