[workspace]
resolver = "2"
members = [
  "crates/surrealdb-component-sdk",
  "crates/surrealdb-host-adapter",
  "examples/guest-demo",
  "examples/host-wasmtime",
]

[workspace.package]
edition = "2024"
repository = "https://github.com/Seamlezz/surrealdb-wasi-component"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
chrono = {
  version = "0.4",
  default-features = false,
  features = [
    "clock",
    "serde",
  ]
}
futures-util = "0.3"
otel-wasi = { git = "https://github.com/Seamlezz/otel-wasi", rev = "6daaf6880b332f433c6d83a6c7b376869c7535bf" }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
surrealdb = {
  version = "3",
  default-features = false,
  features = [
    "kv-mem",
    "protocol-http",
    "rustls",
  ]
}
surrealdb-types = "3"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
wasip3 = "0.7"
wasmtime = {
  version = "46",
  features = [
    "async",
    "component-model",
    "component-model-async",
  ]
}
wasmtime-wasi = { version = "46", features = ["p2", "p3"] }
wit-bindgen = "0.58"
