[package]
name = "surrealdb-component-sdk"
version = "0.4.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust SDK for building SurrealDB WASI components"
authors = ["Seamlezz"]
documentation = "https://github.com/Seamlezz/surrealdb-wasi-component"
keywords = ["surrealdb", "wasi", "component"]
categories = ["api-bindings"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
wit-bindgen.workspace = true
wasip3.workspace = true
