[package]
name = "surrealdb-host-adapter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
ciborium.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
surrealdb.workspace = true
tokio.workspace = true
wasmtime.workspace = true
