[package]
name = "surrealdb-host-adapter"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust host adapter for SurrealDB WASI components"
authors = ["Seamlezz"]
documentation = "https://github.com/Seamlezz/surrealdb-wasi-component"
keywords = ["surrealdb", "wasi", "component"]
categories = ["api-bindings"]

[dependencies]
anyhow.workspace = true
ciborium.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
surrealdb.workspace = true
surrealdb-types.workspace = true
thiserror = "2"
tokio.workspace = true
