[package]
name = "guest-demo"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
autobins = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
surrealdb-component-sdk = { path = "../../crates/surrealdb-component-sdk" }
wit-bindgen.workspace = true
wasip3.workspace = true
