[package]
name = "host-wasmtime"
version = "0.4.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Host runtime example using Wasmtime to run SurrealDB WASI components"

[[bin]]
name = "host-wasmtime"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
surrealdb.workspace = true
surrealdb-host-adapter = { path = "../../crates/surrealdb-host-adapter", features = ["debug-logs"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
wasmtime.workspace = true
wasmtime-wasi.workspace = true
